--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@
 
     <script>
       function submitForm() {
-        // Get all the form data
-        const formData = document.querySelectorAll("input, select");
-        console.log(formData);
+        alert("Form submitted!");
       }
     </script>
   </body>
